# techtest-network-coverage

./: README.md  pyproject.toml
network_api/: api.py  geo_math.py  geo_utils.py  schemas.py
script/: convert_data.py
