[tool.poetry]
name = "papernest_techtest"
version = "0.1.0"
description = "Tech test API to retrive mobile network coverage for an address"
authors = ["LOUBIERE Quentin <map@synidion.fr>"]
packages = [
    { include = "network_api" }
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.86.0"
pyproj = "^3.4.0"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
uvicorn = "^0.19.0"

[tool.poetry.group.dev.dependencies]
tqdm = "^4.64.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
